--- a/netlify.toml
+++ b/netlify.toml
@@ -3,12 +3,12 @@
   publish = "dist"
 
 [template.environment]
-  VUE_APP_CT_PROJECT_KEY = "Your project key (optional)"
-  VUE_APP_CT_CLIENT_ID = "Your client ID (if project key set)"
-  VUE_APP_CT_CLIENT_SECRET = "Your client secret (if project key set)"
-  VUE_APP_CT_SCOPE = "Your client scope (if project key set)"
-  VUE_APP_CT_AUTH_HOST = "Auth host (default Europe)"
-  VUE_APP_CT_API_HOST = "API host (default Europe)"
+  VUE_APP_CT_PROJECT_KEY = replprotoype01
+  VUE_APP_CT_CLIENT_ID = WDAgFPmkOoWbQanSLwsPsBwi
+  VUE_APP_CT_CLIENT_SECRET = lUszK50mCi0phazy7G8_Ko4_TTu_7Kht
+  VUE_APP_CT_SCOPE = manage_my_orders:replprotoype01 view_categories:replprotoype01 manage_my_profile:replprotoype01 create_anonymous_token:replprotoype01 manage_my_shopping_lists:replprotoype01 view_published_products:replprotoype01 manage_my_payments:replprotoype01
+  VUE_APP_CT_AUTH_HOST = https://auth.europe-west1.gcp.commercetools.com
+  VUE_APP_CT_API_HOST = https://api.europe-west1.gcp.commercetools.com
   YARN_FLAGS = "--no-ignore-optional"
 
 # Rule for router history mode
