--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@vue-storefront/commercetools": "0.0.4-prealpha.304",
+    "@vue-storefront/commercetools-api": "0.0.3",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.12",
     "apollo-link": "^1.2.12",
