--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ node_modules
 selenium-debug.log
 
 # local env files
-.env.local
-.env.*.local
-.env.local.*
+# .env.local
+# .env.*.local
+# .env.local.*
 cypress.env.json
 # Log files
 npm-debug.log*
